syntax = "proto3";

package yandex.cloud.priv.datatransfer.v1.endpoint.airbyte;

option go_package = "a.yandex-team.ru/cloud/bitbucket/private-api/yandex/cloud/priv/datatransfer/v1/endpoint/airbyte;tm_server_airbyte_endpoint";

import "yandex/cloud/priv/sensitive.proto";

message AmazonAdsSource {
    string client_id = 1;
    string client_secret = 2 [(sensitive) = true];
    string scope = 3;
    string refresh_token = 4 [(sensitive) = true];
    string start_date = 5;
    string region = 6;
    repeated double profiles = 7;
}
